Giant Refactoring pt.3